--- a/frontend/src/pages/app/panel/home/Home.css
+++ b/frontend/src/pages/app/panel/home/Home.css
@@ -1,31 +1,61 @@
-@keyframes test {
-    to {
-        transform: translateX(-100px);
+#app > .panel {
+    /* Global home view rules */
+    & > .home {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        gap: 20px;
+        view-transition-name: panel-home;
+        padding: 24px;
+
+        /* Bottom area rules */
+        & > .actions-container {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            gap: 12px;
+            overflow: hidden;
+
+            /* Container head rules */
+            & > .head {
+                display: flex;
+                font-size: 14px;
+                font-weight: 600;
+                gap: 12px;
+                align-items: center;
+
+                & p {
+                    margin: 0;
+                }
+
+                /* Container head actions rules */
+                & .actions {
+                    display: flex;
+                    gap: 0;
+                    align-items: center;
+                    flex-grow: 1;
+                    justify-content: end;
+                }
+            }
+        }
+
+        & > .search-button {
+            flex-grow: 1;
+        }
     }
 }
 
-@keyframes test2 {
-    from {
-        transform: translateX(100px);
-    }
-
+@keyframes slide-to-left {
     to {
-        transform: translateX(0);
+        transform: translateX(-100%);
     }
 }
 
 ::view-transition-old(panel-home) {
-	animation: test 0.3s;
+    animation: slide-to-left 0.3s forwards;
 }
 
 ::view-transition-new(panel-home) {
-	animation: test 0.3s reverse;
-}
-
-::view-transition-old(panel-settings) {
-	animation: test2 0.3s reverse;
-}
-
-::view-transition-new(panel-settings) {
-	animation: test2 0.3s;
+    animation: slide-to-left 0.3s reverse forwards ease-in;
 }
